# antique-toy

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  README.md  book-metadata.yaml  book-outline.md  build_book.py  disclaimer.md  glossary.md  index.md  test_mza_compat.sh  version.json
_in/: agon-init.md  book-plan.md  compass_artifact_wf-768f7815-51ee-454e-8aeb-8c1148d4a44d_text_markdown.md  compass_artifact_wf-d10fdac3-f41c-4f6f-83d4-42a5c21c9e40_text_markdown.md  compass_artifact_wf-eb008189-3b19-43f3-ba6b-1365c70ddbe3_text_markdown.md  init.md  z80-book-outline-v2.md  z80-book-outline.md
appendices/: appendix-a-z80-reference.md  appendix-b-sine-tables.md  appendix-c-compression.md  appendix-d-dev-setup.md  appendix-e-ez80-reference.md  appendix-f-z80-variants.md  appendix-g-ay-registers.md  appendix-h-storage-apis.md  appendix-i-bytebeat.md  appendix-j-modern-tools.md
demo/: README.md  packbench.toml
listings/: ch01_practical_the_timing_harness.z80  ch01_reading_the_stripe.z80  ch01_thinking_in_budgets.z80  ch01_variations.z80  ch02_attribute_memory_768_bytes_4.z80  ch02_border_effects.z80  ch02_computing_the_attribute.z80  ch02_computing_the_attribute_2.z80  ch02_downhl_moving_one_pixel_row.z80  ch02_introspec_s_optimisation.z80  ch02_introspec_s_optimisation_2.z80  ch02_moving_down_one_character_row.z80  ch02_moving_down_one_pixel_row.z80  ch02_moving_right_one_byte_8.z80  ch02_moving_up_one_pixel_row.z80  (+264 more)
spectools/: __init__.py  pyproject.toml
spectools/cli/: autodiver.py  notetable.py  scrview.py  sinetable.py  tstate.py
(+263 files in other folders)
